# serializer version: 1
# name: test_browse_media_favorites[-favorites]
  dict({
    'can_expand': True,
    'can_play': False,
    'can_search': False,
    'children': list([
      dict({
        'can_expand': True,
        'can_play': False,
        'can_search': False,
        'children_media_class': None,
        'media_class': 'album',
        'media_content_id': 'object.container.album.musicAlbum',
        'media_content_type': 'favorites_folder',
        'thumbnail': None,
        'title': 'Albums',
      }),
      dict({
        'can_expand': True,
        'can_play': False,
        'can_search': False,
        'children_media_class': None,
        'media_class': 'track',
        'media_content_id': 'object.item.audioItem.audioBook',
        'media_content_type': 'favorites_folder',
        'thumbnail': None,
        'title': 'Audio Book',
      }),
      dict({
        'can_expand': True,
        'can_play': False,
        'can_search': False,
        'children_media_class': None,
        'media_class': 'genre',
        'media_content_id': 'object.item.audioItem.audioBroadcast',
        'media_content_type': 'favorites_folder',
        'thumbnail': None,
        'title': 'Radio',
      }),
    ]),
    'children_media_class': 'directory',
    'media_class': 'directory',
    'media_content_id': '',
    'media_content_type': 'favorites',
    'not_shown': 0,
    'thumbnail': None,
    'title': 'Favorites',
  })
# ---
# name: test_browse_media_favorites[object.container.album.musicAlbum-favorites_folder]
  dict({
    'can_expand': True,
    'can_play': False,
    'can_search': False,
    'children': list([
      dict({
        'can_expand': False,
        'can_play': True,
        'can_search': False,
        'children_media_class': None,
        'media_class': 'album',
        'media_content_id': 'FV:2/8',
        'media_content_type': 'favorite_item_id',
        'thumbnail': 'http://192.168.42.2:1400/getaa?u=x-file-cifs://192.168.42.2/music/iTunes%20Music/Aerosmith/1984&v=742',
        'title': '1984',
      }),
    ]),
    'children_media_class': 'album',
    'media_class': 'directory',
    'media_content_id': '',
    'media_content_type': 'favorites',
    'not_shown': 0,
    'thumbnail': None,
    'title': 'Albums',
  })
# ---
# name: test_browse_media_favorites[object.item.audioItem.audioBook-favorites_folder]
  dict({
    'can_expand': True,
    'can_play': False,
    'can_search': False,
    'children': list([
      dict({
        'can_expand': False,
        'can_play': True,
        'can_search': False,
        'children_media_class': None,
        'media_class': 'track',
        'media_content_id': 'FV:2/66',
        'media_content_type': 'favorite_item_id',
        'thumbnail': 'https://m.media-amazon.com/images/I/810lqLo5m0L._SL600_.jpg',
        'title': 'American Tall Tales',
      }),
    ]),
    'children_media_class': 'track',
    'media_class': 'directory',
    'media_content_id': '',
    'media_content_type': 'favorites',
    'not_shown': 0,
    'thumbnail': None,
    'title': 'Audio Book',
  })
# ---
# name: test_browse_media_library
  list([
    dict({
      'can_expand': True,
      'can_play': False,
      'can_search': False,
      'children_media_class': None,
      'media_class': 'contributing_artist',
      'media_content_id': 'A:ARTIST',
      'media_content_type': 'contributing_artist',
      'thumbnail': None,
      'title': 'Contributing Artists',
    }),
    dict({
      'can_expand': True,
      'can_play': False,
      'can_search': False,
      'children_media_class': None,
      'media_class': 'artist',
      'media_content_id': 'A:ALBUMARTIST',
      'media_content_type': 'artist',
      'thumbnail': None,
      'title': 'Artists',
    }),
    dict({
      'can_expand': True,
      'can_play': False,
      'can_search': False,
      'children_media_class': None,
      'media_class': 'album',
      'media_content_id': 'A:ALBUM',
      'media_content_type': 'album',
      'thumbnail': None,
      'title': 'Albums',
    }),
    dict({
      'can_expand': True,
      'can_play': False,
      'can_search': False,
      'children_media_class': None,
      'media_class': 'genre',
      'media_content_id': 'A:GENRE',
      'media_content_type': 'genre',
      'thumbnail': None,
      'title': 'Genres',
    }),
    dict({
      'can_expand': True,
      'can_play': False,
      'can_search': False,
      'children_media_class': None,
      'media_class': 'composer',
      'media_content_id': 'A:COMPOSER',
      'media_content_type': 'composer',
      'thumbnail': None,
      'title': 'Composers',
    }),
    dict({
      'can_expand': True,
      'can_play': True,
      'can_search': False,
      'children_media_class': None,
      'media_class': 'track',
      'media_content_id': 'A:TRACKS',
      'media_content_type': 'track',
      'thumbnail': None,
      'title': 'Tracks',
    }),
    dict({
      'can_expand': True,
      'can_play': False,
      'can_search': False,
      'children_media_class': None,
      'media_class': 'playlist',
      'media_content_id': 'A:PLAYLISTS',
      'media_content_type': 'playlist',
      'thumbnail': None,
      'title': 'Playlists',
    }),
  ])
# ---
# name: test_browse_media_library_albums
  list([
    dict({
      'can_expand': True,
      'can_play': True,
      'can_search': False,
      'children_media_class': None,
      'media_class': 'album',
      'media_content_id': "A:ALBUM/A%20Hard%20Day's%20Night",
      'media_content_type': 'album',
      'thumbnail': 'http://192.168.42.2:1400/getaa?u=x-file-cifs://192.168.42.100/music/The%20Beatles/A%20Hard%20Day%27s%20Night/01%20A%20Hard%20Day%27s%20Night%201.m4a&v=53',
      'title': "A Hard Day's Night",
    }),
    dict({
      'can_expand': True,
      'can_play': True,
      'can_search': False,
      'children_media_class': None,
      'media_class': 'album',
      'media_content_id': 'A:ALBUM/Abbey%20Road',
      'media_content_type': 'album',
      'thumbnail': 'http://192.168.42.2:1400/getaa?u=x-file-cifs://192.168.42.100/music/The%20Beatles/AbbeyA%20Road/01%20Come%20Together.m4a&v=53',
      'title': 'Abbey Road',
    }),
    dict({
      'can_expand': True,
      'can_play': True,
      'can_search': False,
      'children_media_class': None,
      'media_class': 'album',
      'media_content_id': 'A:ALBUM/Between%20Good%20And%20Evil',
      'media_content_type': 'album',
      'thumbnail': 'http://192.168.42.2:1400/getaa?u=x-file-cifs://192.168.42.100/music/Santana/A%20Between%20Good%20And%20Evil/02%20A%20Persuasion.m4a&v=53',
      'title': 'Between Good And Evil',
    }),
    dict({
      'can_expand': True,
      'can_play': True,
      'can_search': False,
      'children_media_class': None,
      'media_class': 'album',
      'media_content_id': "A:ALBUM/Special%20Characters,'()+",
      'media_content_type': 'album',
      'thumbnail': 'http://192.168.42.2:1400/getaa?u=x-file-cifs://192.168.42.100/music/Special/A%20Special%20Characters%2C%28%29%2B/01%20A%20TheFirstTrack.m4a&v=53',
      'title': "Special Characters,'()+",
    }),
  ])
# ---
# name: test_browse_media_root
  list([
    dict({
      'can_expand': True,
      'can_play': False,
      'can_search': False,
      'children_media_class': None,
      'media_class': 'directory',
      'media_content_id': '',
      'media_content_type': 'favorites',
      'thumbnail': 'https://brands.home-assistant.io/_/sonos/logo.png',
      'title': 'Favorites',
    }),
    dict({
      'can_expand': True,
      'can_play': False,
      'can_search': False,
      'children_media_class': None,
      'media_class': 'directory',
      'media_content_id': '',
      'media_content_type': 'library',
      'thumbnail': 'https://brands.home-assistant.io/_/sonos/logo.png',
      'title': 'Music Library',
    }),
  ])
# ---
